Update backend for upgraded OpenDDD.NET nuget.

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -12,7 +12,7 @@ COPY src/Sessions.sln ./
 
 # Copy all project files (to benefit from layer caching during restore)
 COPY src/Sessions/Sessions.csproj ./Sessions/
-COPY src/DDD/DDD.csproj ./DDD/
+COPY src/OpenDDD/OpenDDD.csproj ./OpenDDD/
 
 # Restore dependencies
 RUN dotnet restore Sessions.sln
