--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -3,6 +3,18 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 8080
 
+# Install Chromium and required dependencies for PuppeteerSharp
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    chromium \
+    libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 \
+    libxcomposite1 libxrandr2 libxdamage1 libgbm1 libpango-1.0-0 \
+    libpangocairo-1.0-0 libasound2 libxshmfence1 libx11-xcb1 \
+    libxcb-dri3-0 libglib2.0-0 \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
+# Set Chromium path as an environment variable
+ENV PUPPETEER_EXECUTABLE_PATH="/usr/bin/chromium"
+
 # Build the application
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
